force-app/main/default/objects/Log__c/fields/ApexMethod__c.field-meta.xml
<CustomField>
    <fullName>ApexMethod__c</fullName>
    <description>Apex Method</description>
    <inlineHelpText>Apex Method</inlineHelpText>
    <label>Apex Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>