force-app/main/default/objects/Log__c/fields/ExceptionLine__c.field-meta.xml
<CustomField>
    <fullName>ExceptionLine__c</fullName>
    <description>ExceptionLine</description>
    <inlineHelpText>ExceptionLine</inlineHelpText>
    <label>ExceptionLine</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>