force-app/main/default/objects/Log__c/fields/ExceptionType__c.field-meta.xml
<CustomField>
    <fullName>ExceptionType__c</fullName>
    <description>ExceptionType</description>
    <inlineHelpText>ExceptionType</inlineHelpText>
    <label>ExceptionType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>