force-app/main/default/objects/Log__c/fields/Limits__c.field-meta.xml
<CustomField>
    <fullName>Limits__c</fullName>
    <description>Limits</description>
    <inlineHelpText>Limitd</inlineHelpText>
    <label>Limits</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>