force-app/main/default/objects/Log__c/fields/LogType__c.field-meta.xml
<CustomField>
    <fullName>LogType__c</fullName>
    <description>Log Type (INFO, ERROR, DEBUG, FATAL, EXCEPTION)</description>
    <inlineHelpText>Log Type (INFO, ERROR, DEBUG, FATAL, EXCEPTION)</inlineHelpText>
    <label>LogType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>